[package]
name = "moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
rocket = "0.5.0-rc.2"
serde = "1.0.144"
serde-xml-rs = "0.6.0"
tokio = { version = "1.21.1", features = ["full"] }
