[package]
name = "moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = "0.11.11"
rocket = {version = "0.5.0-rc.2", features = ["http2","json","secrets"]}
serde = "1.0.144"
serde-xml-rs = "0.6.0"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
